--- a/src/app/components/crud-reclamo/crud-reclamo.component.html
+++ b/src/app/components/crud-reclamo/crud-reclamo.component.html
@@ -1,1 +1,276 @@
-<p>crud-reclamo works!</p>
+<div class="container">
+  <h5>Crud de Reclamo</h5>
+
+  <div class="col-md-23" style="margin-top: 3%">
+    <div class="row" style="height: 80px">
+        <div class="col-md-2">
+          <button type="button" class="btn btn-primary" id="id_btn_filtrar" style="width: 150px" (click)="consulta()">Mostrar todos los reclamos</button>
+        </div>
+        <div class="col-md-2">
+            <button  type="button" data-toggle='modal' data-target="#idModalRegistrar" class='btn btn-success' style="width: 150px">Registrar</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="content">
+
+                <table id="id_table" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th style="width: 5%">#</th>
+                            <th style="width: 30%">Descripcion</th>
+                            <th style="width: 10%">Fecha Compra</th>
+                            <th style="width: 10%">Estado</th>
+                            <th style="width: 31%">Cliente</th>
+                            <th style="width: 30%">Tipo Reclamo</th>
+                            <th style="width: 7%"></th>
+                            <th style="width: 7%"></th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let aux of reclamosLista">
+                            <td>{{ aux.idReclamo }}</td>
+                            <td>{{ aux.descripcion }}</td>
+                            <td>{{ aux.fechaCompra | date: 'dd/MM/yyyy' }}</td>
+                            <td>{{ aux.estado == 1 ? "Activo" : "Inactivo"}}</td>
+                            <td>{{ aux.cliente?.nombres }}</td>
+                            <td>{{ aux.tipoReclamo?.descripcion}}</td>
+                            <td>
+                                <div class="custom-control custom-switch">
+                                    <input type="checkbox" class="custom-control-input" id="idEstado_{{ aux.idReclamo }}" [checked]="aux.estado==1?true:false" name="estado" (change)="actualizaEstado(aux)" />
+                                    <label class="custom-control-label" for="idEstado_{{ aux.idReclamo }}"></label>
+                                </div>
+                            </td>
+                            <td><button type="button" style="width: 90px" class="btn btn-primary btn-sm"  data-toggle="modal" data-target="#idModalActualizar" (click)="buscar(aux)" >Editar</button></td>
+                            <td><button type="button" style="width: 90px" class="btn btn-danger btn-sm"  (click)="elimina(aux)" >Eliminar</button></td>
+                          </tr>
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+
+
+
+
+<div class="modal fade"  id="idModalRegistrar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+
+  <div class="modal-dialog" style="max-width: 70%;">
+      <div class="modal-content" >
+
+          <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Registro de Reclamo</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+
+          <div class="modal-body">
+              <form class="content" (ngSubmit)="registrar()"   [formGroup]="formsValidacion">
+                  <div class="submit-form">
+                          <div  class="row">
+                              <div class="col-lg-2">
+                              </div>
+                              <div class="col-lg-4">
+                                  <label for="id_reg_descripcion">Descripcion</label>
+                                  <input  formControlName="validaDescripcion" [(ngModel)]="reclamo.descripcion" type="text" placeholder="Ingrese la descripcion" class="form-control" name="descripcion" id="id_reg_descripcion" />
+                                  <div *ngIf=" submitted && validaDescripcion?.errors?.['pattern']" class="invalid">
+                                      <ul>
+                                          <li>La descripcion es de 10 a 40 caracteres</li>
+                                      </ul>
+                                  </div>
+                                  <div *ngIf="submitted && validaDescripcion?.errors?.['required']" class="invalid">
+                                    <ul>
+                                      <li >La descripcion es obligatorio</li>
+                                    </ul>
+                                  </div>
+                                  <div *ngIf="submitted && reclamo.descripcion?.trim()?.length == 0" class="invalid">
+                                    <ul>
+                                      <li>No se se permiten espacios en blanco</li>
+                                    </ul>
+                                  </div>
+                              </div>
+
+                              <div class="col-lg-4">
+                                  <label for="id_reg_fecha">Fecha de Compra</label>
+                                  <input formControlName="validaFecha" class="form-control" type="date"  id="fechaCompra" name="fechaCompra" [(ngModel)]="reclamo.fechaCompra"/>
+                                  <div *ngIf="submitted && validaFecha?.errors?.['required']" class="invalid">
+                                      <ul>
+                                          <li>La fecha es requerida</li>
+                                      </ul>
+                                   </div>
+
+                              </div>
+                          </div>
+                          <div class="row" style="margin-top: 5%">
+                            <div class="col-lg-2">
+                            </div>
+                              <div class="col-lg-4">
+                                  <label for="id_reg_cliente">Cliente</label>
+                                  <select formControlName="validaCliente" [(ngModel)]="reclamo.cliente!.idCliente"    id="id_reg_cliente" name="cliente" class="form-control">
+                                    <option value="-1">[Seleccione]</option>
+                                    <option *ngFor="let aux of clientesLista"  value="{{ aux.idCliente }}">
+                                              {{ aux.nombres }}
+                                    </option>
+                                  </select>
+                                  <div *ngIf="submitted && validaCliente?.errors?.['min'] " class="invalid">
+                                      <ul>
+                                          <li> El Cliente es obligatorio</li>
+                                      </ul>
+                                   </div>
+                              </div>
+
+                              <div class="col-lg-4">
+                                  <label  for="id_reg_tiporeclamo">Tipo Reclamo</label>
+                                  <select  formControlName="validaTipoReclamo"  [(ngModel)]="reclamo.tipoReclamo!.idTipoReclamo"   id="id_reg_tiporeclamo" name="tiporeclamo" class="form-control" >
+                                      <option value="-1"> [Seleccione] </option>
+                                       <option *ngFor="let aux of tipoReclamo" value="{{ aux.idTipoReclamo }}">
+                                                  {{ aux.descripcion }}
+                                       </option>
+                                  </select>
+                                  <div *ngIf="submitted && validaTipoReclamo?.errors?.['min'] " class="invalid">
+                                      <ul>
+                                          <li>El tipo de Reclamo es obligatorio</li>
+                                      </ul>
+                                   </div>
+                              </div>
+
+                          </div>
+
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn_reg_cerrar" style="width: 100px;" (click)="cerrar()">Close</button>
+                      <div class="form-group text-center">
+                          <div class="col-lg-12">
+                              <button id="id_reg_registra"  class="btn btn-success form-control"style="width: 100px;" [disabled]="submitted && formsValidacion.invalid">Registrar</button>
+                          </div>
+                      </div>
+                  </div>
+
+
+              </form>
+          </div>
+
+
+
+      </div>
+  </div>
+</div>
+
+
+
+<div class="modal fade" id="idModalActualizar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" style="max-width: 80%;">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Actualización de Reclamo</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                   <span aria-hidden="true">&times;</span>
+               </button>
+          </div>
+          <div class="modal-body">
+
+              <form class="content" (ngSubmit)="actualiza()" [formGroup]="formsValidacion">
+                  <div class="submit-form">
+
+                    <div  class="row">
+                      <div class="col-lg-8">
+                          <label for="id_reg_descripcion">Descripcion</label>
+                          <input  formControlName="validaDescripcion" [(ngModel)]="reclamo.descripcion" type="text" placeholder="Ingrese la descripcion" class="form-control" minlength="10" maxlength="30" name="descripcion" id="id_reg_descripcion" />
+                          <div *ngIf=" submitted && validaDescripcion?.errors?.['pattern']" class="invalid">
+                              <ul>
+                                  <li>La descripcion es obligatorio</li>
+                                  <li>La descripcion es de 10 a 40 caracteres</li>
+                              </ul>
+                          </div>
+                      </div>
+
+                      <div class="col-lg-4">
+                          <label for="id_reg_fecha">Fecha de Compra</label>
+                          <input formControlName="validaFecha" class="form-control" type="date" id="fechaCompra" name="fechaCompra" [(ngModel)]="reclamo.fechaCompra"/>
+                          <div *ngIf="submitted && validaFecha?.errors?.['required']" class="invalid">
+                              <ul>
+                                  <li>La fecha es requerida</li>
+                              </ul>
+                           </div>
+
+                      </div>
+
+                      <div class="col-lg-2">
+                        <label  for="id_act_estado">Estado</label>
+                        <select formControlName="validaEstado" [(ngModel)]="reclamo.estado"  id="id_act_estado" name="estado" class="form-control">
+                            <option value="-1"> [Seleccione] </option>
+                            <option value="1"> Activo </option>
+                            <option value="0"> Inactivo </option>
+                        </select>
+                        <div *ngIf="submitted && validaEstado?.errors?.['min']" class="invalid">
+                            <ul>
+                                <li>El estado es obligatorio</li>
+                            </ul>
+                         </div>
+                      </div>
+                  </div>
+                  <div class="row" style="margin-top: 5%">
+                      <div class="col-lg-4">
+                          <label for="id_reg_departamento">Cliente</label>
+                          <select formControlName="validaCliente" [(ngModel)]="reclamo.cliente!.idCliente"    id="id_reg_cliente" name="cliente" class="form-control">
+                            <option value="-1">[Seleccione]</option>
+                            <option *ngFor="let aux of clientesLista"  value="{{ aux.idCliente }}">
+                                      {{ aux.nombres }}
+                            </option>
+                          </select>
+                          <div *ngIf="submitted && validaCliente?.errors?.['min']" class="invalid">
+                              <ul>
+                                  <li> El Cliente es obligatorio</li>
+                              </ul>
+                           </div>
+                      </div>
+
+                      <div class="col-lg-4">
+                          <label  for="id_reg_provincia">Tipo Reclamo</label>
+                          <select  formControlName="validaTipoReclamo"  [(ngModel)]="reclamo.tipoReclamo!.idTipoReclamo"   id="id_reg_tiporeclamo" name="tiporeclamo" class="form-control" >
+                              <option value="-1"> [Seleccione] </option>
+                               <option *ngFor="let aux of tipoReclamo" value="{{ aux.idTipoReclamo }}">
+                                          {{ aux.descripcion }}
+                               </option>
+                          </select>
+                          <div *ngIf="submitted && validaTipoReclamo?.errors?.['min']" class="invalid">
+                              <ul>
+                                  <li>El tipo de Reclamo es obligatorio</li>
+                              </ul>
+                           </div>
+                      </div>
+
+                  </div>
+
+
+
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn_act_cerrar" (click)="cerrar()">Close</button>
+                      <div class="form-group text-center">
+                          <div class="col-lg-12">
+                              <button id="id_act_actualiza" class="btn btn-success form-control" [disabled]="submitted && formsValidacion.invalid">Actualizar</button>
+                          </div>
+                      </div>
+                  </div>
+              </form>
+
+
+
+
+
+          </div>
+
+      </div>
+  </div>
+</div>
+
