--- a/src/app/components/crud-cliente/crud-cliente.component.html
+++ b/src/app/components/crud-cliente/crud-cliente.component.html
@@ -77,7 +77,7 @@
                                 <div  class="row">
                                     <div class="col-lg-8">
                                         <label for="id_reg_nombres">Nombres</label>
-                                        <input [(ngModel)]="cliente.nombres" type="text" placeholder="Ingrese los nombres" class="form-control" name="nombres" 
+                                        <input [(ngModel)]="cliente.nombres" type="text" placeholder="Ingrese el Nombre Completo" class="form-control" name="nombres" 
                                         id="id_reg_nombres" #validaNombres="ngModel" required pattern="[a-zA-Z ]{3,30}"/>
                                         <div *ngIf="validaNombres.invalid && (validaNombres.dirty || validaNombres.touched)" class="alert alert-danger">
                                             <div *ngIf="validaNombres.errors!">
@@ -91,7 +91,7 @@
                                     
                                     <div class="col-lg-4">
                                         <label for="id_reg_dni">DNI</label>
-                                        <input  [(ngModel)]="cliente.dni" type="text"  placeholder="Ingrese dni" class="form-control" name="dni" id="id_reg_dni"  #validaDni="ngModel" required pattern="[0-9]{8}"/>
+                                        <input  [(ngModel)]="cliente.dni" type="text"  placeholder="Ingrese el DNI" class="form-control" name="dni" id="id_reg_dni"  #validaDni="ngModel" required pattern="[0-9]{8}"/>
                                         <div *ngIf="validaDni.invalid && (validaDni.dirty || validaDni.touched)" class="alert alert-danger">
                                             <div *ngIf="validaDni.errors!">
                                                      El DNI es obligatorio
@@ -128,7 +128,7 @@
                                              </option>
                                         </select>
                                         <div *ngIf="validaProvincia.invalid && (validaProvincia.dirty || validaProvincia.touched) " class="alert alert-danger">
-                                                    El Provincia es obligatorio
+                                                    La Provincia es obligatoria
                                         </div>
                                     </div>
 
@@ -174,7 +174,7 @@
         <div class="modal-dialog" style="max-width: 80%;">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Actualización de cliente</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Actualización del cliente</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                          <span aria-hidden="true">&times;</span>
                      </button>
@@ -187,7 +187,7 @@
                             <div  class="row">
                                 <div class="col-lg-8">
                                     <label for="id_act_nombres">Nombres</label>
-                                    <input [(ngModel)]="cliente.nombres"  type="text" placeholder="Ingrese el nombre completo" class="form-control" name="validaNombres" 
+                                    <input [(ngModel)]="cliente.nombres"  type="text" placeholder="Ingrese el Nombre Completo" class="form-control" name="validaNombres" 
                                     id="id_act_nombres" #validaNombres="ngModel" required pattern="[a-zA-Z ]{3,30}"/>
                                     <div *ngIf="validaNombres.invalid && (validaNombres.dirty || validaNombres.touched)" class="alert alert-danger">
                                         <div *ngIf="validaNombres.errors!">
@@ -215,13 +215,13 @@
 
                                 <div class="col-lg-2">
                                     <label for="id_act_dni">DNI</label>
-                                    <input [(ngModel)]="cliente.dni"  type="text" placeholder="Ingrese dni" class="form-control" name="dni" id="id_act_dni"  maxlength="8" #validaDni="ngModel" required pattern="[0-9]{8}"/>
+                                    <input [(ngModel)]="cliente.dni"  type="text" placeholder="Ingrese el DNI" class="form-control" name="dni" id="id_act_dni"  maxlength="8" #validaDni="ngModel" required pattern="[0-9]{8}"/>
                                     <div *ngIf="validaDni.invalid && (validaDni.dirty || validaDni.touched)" class="alert alert-danger">
                                         <div *ngIf="validaDni.errors!">
                                                  El DNI es obligatorio
                                         </div>  
                                         <div *ngIf="validaDni.errors!">
-                                                 El DNI es de 8 dígitos
+                                                 El DNI es de 8 dígitos.
                                          </div>    
                                    </div> 
                                 </div>
@@ -238,7 +238,7 @@
                                         </option> 
                                     </select>
                                     <div *ngIf="validaDepartamento.invalid && (validaDepartamento.dirty || validaDepartamento.touched) " class="alert alert-danger">
-                                        El Departamento es obligatorio
+                                        El Departamento es obligatorio.
                                     </div>
                                 </div>
     
@@ -251,7 +251,7 @@
                                         </option>   
                                     </select>
                                     <div *ngIf="validaProvincia.invalid && (validaProvincia.dirty || validaProvincia.touched) " class="alert alert-danger">
-                                        El Provincia es obligatorio
+                                        La Provincia es obligatoria
                                      </div>
                                 </div>
     
@@ -271,7 +271,7 @@
                         </div>
 
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn_act_cerrar" style="width: 100px;">Close</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btn_act_cerrar" style="width: 100px;">Cerrar</button>
                             <button type="reset" class="btn btn-secondary" id="btn_act_limpiar" style="width: 100px;">Limpiar</button>
                             <div class="form-group text-center">
                                 <div class="col-lg-12">
