--- a/src/app/components/consulta-sede/consulta-sede.component.html
+++ b/src/app/components/consulta-sede/consulta-sede.component.html
@@ -27,6 +27,10 @@
                         <label class="custom-control-label" for="estado">Estado</label>
                     </div>
                 </div>
+                <label for="codigoPostal" class="col-lg-1">Codigo Postal</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="codigoPostal" id="codigoPostal"  [(ngModel)]= "codigoPostal" />
+                </div>
                 <div class="col-lg-2">
                     <button class="btn btn-success"  >Filtrar</button>
                 </div>
