--- a/src/app/components/consulta-marca/consulta-marca.component.html
+++ b/src/app/components/consulta-marca/consulta-marca.component.html
@@ -1,1 +1,90 @@
-<p>consulta-marca works!</p>
+<div>
+
+    <form class="content" (ngSubmit)="consultaMarca()">
+
+
+    <div class="submit-form" >
+  
+         <div class="row">
+            <div class="col-lg-12">
+                <h6>Consulta de marca usando JSON</h6>
+            </div>
+        </div>
+  
+        <div class="row" style="margin-top: 2%">
+                <label for="nombre" class="col-lg-1">Nombre</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="nombre" id="nombre"  [(ngModel)]= "nombre" />
+                </div>
+
+                <label for="descripcion" class="col-lg-1">Descripcion</label>
+                <div class="col-lg-2">
+                    <input type="text" class="form-control" name="descripcion" id="descripcion"  [(ngModel)]= "descripcion" />
+                </div>
+
+                <label for="estado" class="col-lg-1">Estado</label>
+                <!-- <label class="switch">
+                    <input type="checkbox" class="form-control" name="estado" id="estado"  [(ngModel)]= "estado">
+                    <span class="slider round"></span>
+                </label> -->
+
+                <div class="check">
+                    <label>
+                        <input type="checkbox" name="estado" id="estado" [(ngModel)]= "estado">
+                        <span>
+                            <i></i>
+                        </span>
+                    </label>
+                </div>
+
+         </div>
+
+         <div class="row" style="margin-top: 2%">
+                <div class="col-lg-3">
+                    <label for="pais">Pais</label>
+                    <select  id="pais" name="pais" class="form-control" [(ngModel)] = "selPais"  >
+                        <option value="-1"> [Seleccione] </option>   
+                        <option *ngFor="let aux of paises" value="{{aux.idPais}}">
+                            {{aux.nombre}}
+                        </option>
+                    </select>
+                </div>
+
+                <div class="col-lg-2 offset-md-1 mt-4">
+                    <button   >Filtrar</button>                    
+                </div>
+         </div>
+
+         <div class="row" style="margin-top: 3%">
+                <table class="table table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>Descripcion</th>
+                            <th>Vigencia</th>
+                            <th>Certificado</th>
+                            <th>Estado</th>
+                            <th>Pais</th>                  
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let aux of marcas">
+                            <td> {{ aux.idMarca }}</td>
+                            <td> {{ aux.nombre }}</td>
+                            <td> {{ aux.descripcion }}</td>
+                            <td> {{ aux.fechaVigencia }}</td>
+                            <td> {{ aux.certificado }}</td>
+                            <td>{{ aux.estado==1?'Activo':'Inactivo' }}</td>
+                            <td> {{ aux.pais!.nombre }} </td>                     
+                        </tr>
+                    </tbody>                       
+
+                </table>
+         </div>        
+
+        </div>
+  
+     </form>  
+  
+    </div>
