--- a/src/app/components/registra-marca/registra-marca.component.html
+++ b/src/app/components/registra-marca/registra-marca.component.html
@@ -1,1 +1,62 @@
-<p>registra-marca works!</p>
+<div>
+
+    <form class="content" (ngSubmit)="insertado()">
+    <div class="submit-form">
+  
+         <div class="row">
+            <div class="col-lg-12">
+                <h6>Registro de Marca </h6>
+            </div>
+        </div>
+  
+        <div class="row" style="margin-top: 3%">
+                <div class="col-lg-4">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)] = "marca.nombre" />
+                </div>
+            
+                <div class="col-lg-8">
+                    <label for="descripcion">Descripción</label>
+                    <input type="text" class="form-control" name="descripcion" id="descripcion" [(ngModel)] = "marca.descripcion"/>
+                </div>
+         </div>
+  
+        <div class="row" style="margin-top: 3%">
+
+            <div class="col-lg-4">
+                <label for="fechaVigencia">Fecha Vigencia</label>
+                <input type="text" class="form-control" name="fechaVigencia" id="fechaVigencia" [(ngModel)] = "marca.fechaVigencia"/>
+            </div>
+
+            <div class="col-lg-4">
+                <label for="certificado">Certificado</label>
+                <input type="text" class="form-control" name="certificado" id="certificado" [(ngModel)] = "marca.certificado"/>
+            </div>
+
+            <div class="col-lg-4">
+                <label for="pais">País</label>
+                <select  id="pais" name="pais" class="form-control" [(ngModel)] = "marca.pais!.idPais"  >
+                    <option value="-1"> [Seleccione] </option>   
+                    <option *ngFor="let aux of paises" value="{{aux.idPais}}">
+                        {{aux.nombre}}
+                    </option>
+                </select>
+            </div>
+
+            
+
+        </div>
+  
+        <div class="row" style="margin-top: 3%"> 
+                <div class="col-lg-12">
+                    <button class="btn btn-success"  >Enviar</button>
+                </div>
+        </div>
+  
+    
+      </div>
+  
+     </form>
+  
+  
+    </div>
